# slumbr

./: .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  pyproject.toml  sleepy_errlog.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
packaging/: README.md  build-constraints.txt  build_cpu.ps1  build_nvidia.ps1  rthook_cuda_preload.py  slumbr-cpu.spec  slumbr-nvidia.spec  slumbr.iss  slumbr_entry.py  version_info.txt
scripts/: benchmark.py  benchmark_prompts.txt  brand_launcher.py  build_icon.py  install_shortcut.py  set_version.py
scripts/benchmark_data/: .gitignore
slumbr/: __init__.py  __main__.py  _bundled.py  app.py  branding.py  code_grammar.py  config.py  formatting.py  history.py  history_store.py  polish.py  session_logs.py  state.py  theme.py  winident.py
slumbr/assets/fonts/: README.md
slumbr/audio/: capture.py  mirror.py
slumbr/bootstrap/: __init__.py  install.py  vbcable.py
slumbr/hardware/: __init__.py  probe.py  recommend.py
slumbr/input/: foreground.py  hotkey.py  keymap.py  mute_key.py  paste.py
slumbr/stt/: engine.py  factory.py  protocol.py  streaming_engine.py  streaming_zipformer.py  worker.py
slumbr/stt/backends/: __init__.py  directml.py  moonshine.py  whisper_ct2.py  whispercpp.py
slumbr/ui/: anim.py  hub_panels.py  keyboard_picker.py  main_window.py  popup.py  preparing.py  recovery_dialog.py  settings_dialog.py  setup_wizard.py  tray.py
slumbr/ui/tabs/: __init__.py  _widgets.py  about.py  advanced.py  behavior.py  customization.py  engine.py  history.py  modes.py  shortcuts.py  voice.py
tests/: test_bundled.py  test_code_grammar.py  test_config.py  test_config_modes.py  test_config_robustness.py  test_correctness_fixes.py  test_engine_fallback.py  test_history.py  test_hotkey_state_machine.py  test_local_agreement.py  test_mic_mirror_push.py  test_mirror_cables.py  test_polish.py  test_session_logs.py  test_theme_contrast.py  test_tray_menu.py  test_voice_devices.py
