[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slumbr"
version = "0.1.0"
description = "Local voice-to-text dictation runner for Windows (offline, Whisper-powered)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sleepy Productions" }]
keywords = ["speech-to-text", "dictation", "whisper", "voice", "stt", "offline", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "faster-whisper==1.2.1",
    "sherpa-onnx>=1.13",
    "sounddevice==0.3.12",
    "numpy",
    "pynput==1.7.6",
    "pyperclip",
    "PySide6==6.7.0",
    "pyqtgraph",
    "pystray",
    "Pillow",
    # CUDA runtime for ctranslate2 (faster-whisper backend). ctranslate2 4.x
    # dropped these as transitive deps — they must be pinned here or every
    # fresh install hits "cublas64_12.dll not found" on first transcribe.
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-nvrtc-cu12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
package = [
    "pyinstaller==6.8.0",
]

[project.urls]
Homepage = "https://github.com/SIeepyDev/slumbr"
Repository = "https://github.com/SIeepyDev/slumbr"
Issues = "https://github.com/SIeepyDev/slumbr/issues"
Changelog = "https://github.com/SIeepyDev/slumbr/blob/main/CHANGELOG.md"

[project.scripts]
slumbr = "slumbr.__main__:main"

[tool.setuptools.packages.find]
include = ["slumbr*"]

[tool.setuptools.package-data]
slumbr = ["assets/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
