[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slumbr"
version = "1.1.1"
description = "Local voice-to-text dictation runner for Windows (offline, Whisper-powered)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Sleepy Productions" }]
keywords = ["speech-to-text", "dictation", "whisper", "voice", "stt", "offline", "windows"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # ----- Always-installed core -----
    # sherpa-onnx is non-negotiable: Slumbr's streaming popup partials
    # always run Moonshine + Silero VAD + online-punct on CPU regardless
    # of which primary backend the user picks. ~80 MB.
    "sherpa-onnx>=1.13",
    # huggingface_hub downloads the Moonshine + Silero VAD + punctuation
    # models for that always-on streaming path, so it's core too — NOT
    # optional. (It used to arrive only transitively via the faster-whisper
    # extra, which left CPU/base installs unable to fetch any model.)
    # Floor (not exact pin): hugging_face_hub has broken its own API across
    # minor versions before, so guard the low end; the upper end floats.
    "huggingface_hub>=0.20",
    # Audio capture + hotkey + paste — every backend needs them. Floors are the
    # tested-known-good versions; loosened from exact pins so routine patch
    # bumps don't force a resolver conflict for installers-from-source.
    "sounddevice>=0.3.12",
    "numpy",
    "pynput>=1.7.6",
    "pyperclip",
    # UI stack. PySide6 patches frequently; allow the whole 6.x line, hold the
    # major (a 7.x could land Qt-API breaks).
    "PySide6>=6.7,<7",
    "pyqtgraph",
    "pystray",
    "Pillow",
    # Win32 APIs — HWND paste targeting + desktop-shortcut creation. Was
    # pip-installed ad-hoc by install.ps1; declared here so `pip install -e .`
    # is self-sufficient.
    "pywin32",
]

[project.optional-dependencies]
# ----- Per-vendor backends, picked by the first-launch wizard.
# The wizard runs `pip install slumbr[<vendor>]` once the user has
# accepted a recommendation; base install (no extras) stays lean
# so AMD users don't drag in 1.9 GB of NVIDIA CUDA wheels.

nvidia = [
    # faster-whisper / CTranslate2 CUDA path.
    "faster-whisper==1.2.1",
    # CUDA runtime DLLs — ctranslate2 4.x dropped these as transitive deps,
    # so they must be pinned here or every fresh install hits
    # "cublas64_12.dll not found" on first transcribe.
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-nvrtc-cu12",
]

amd = [
    # ONNX Runtime DirectML — works on any DX12 GPU (AMD Radeon RX,
    # Intel Arc, even older NVIDIA). `optimum` + `transformers` give us
    # the maintained Whisper-to-ONNX runtime path on top of ORT.
    "onnxruntime-directml>=1.18",
    "optimum>=1.21",
    "transformers>=4.40",
]

intel = [
    # Phase 2 ships only the CPU build of pywhispercpp. Intel SYCL
    # (whisper.cpp -DGGML_SYCL=ON) requires a custom build pipeline
    # that's a separate distribution problem; intel users on Phase 2
    # land on DirectML or CPU pywhispercpp instead.
    "pywhispercpp>=1.4.1",
    # DirectML is the snappier path for Intel Arc + Xe iGPUs; keep
    # both wheels so the recommender can pick at runtime.
    "onnxruntime-directml>=1.18",
    "optimum>=1.21",
    "transformers>=4.40",
]

cpu = [
    # CPU users default to Moonshine (already in base via sherpa-onnx).
    # pywhispercpp is offered for users who want Whisper-quality at
    # the cost of latency (~4-10 s for a 5 s utterance).
    "pywhispercpp>=1.4.1",
]

dev = [
    "pytest",
    "pytest-mock",  # patch sounddevice/transcriber in the audio-pipeline tests
    "coverage",     # measure what the suite actually exercises
    "ruff",
]
package = [
    "pyinstaller==6.8.0",
]

[project.urls]
Homepage = "https://github.com/SIeepyDev/slumbr"
Repository = "https://github.com/SIeepyDev/slumbr"
Issues = "https://github.com/SIeepyDev/slumbr/issues"
Changelog = "https://github.com/SIeepyDev/slumbr/blob/main/CHANGELOG.md"

[project.scripts]
slumbr = "slumbr.__main__:main"

[tool.setuptools.packages.find]
include = ["slumbr*"]

[tool.setuptools.package-data]
slumbr = ["assets/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
